# saintrocky

./: .env.example  .gitignore  .slugignore  README.md  eslint.config.js  jest.config.js  jsconfig.json  package.json  server.mjs
.github/workflows/: ci.yml
apps/api/: package.json
apps/api/scripts/: patch-blog-longform.mjs  reconcile-duplicate-rules.mjs  seed-all.mjs  seed-blog.mjs  seed-booking.mjs  seed-contact.mjs  seed-events.mjs  seed-registry.mjs  seed-rules.mjs  seed-seo.mjs  seed-social.mjs  seed-support.mjs  seed-users.mjs  seed-wallets.mjs
apps/api/src/: app.js  bootstrap.js  index.js  logger.js
apps/blockchain/: Anchor.toml
apps/blockchain/escrow/: Cargo.toml
apps/blockchain/escrow/src/: errors.rs  lib.rs  state.rs
apps/blockchain/scripts/: initialize-platform.mjs
apps/electron/: package.json  vite.config.js
apps/electron/resources/: icon.icns
apps/electron/scripts/: notarize.js
apps/electron/src/: auth-store.js  desktop-client.js  load-environment.js  main.js  preload.js  process-observer.js  runtime-config.js  (+3 more)
apps/extension/: CHROME_WEB_STORE.md  dist.crx  manifest.json  package.json  vite.config.mjs
apps/mobile/: App.js  app.config.cjs  app.config.js  app.json  babel.config.cjs  eas.json  eslint.config.js  index.js  jest.config.js  jsconfig.json  metro.config.js  package.json
apps/web/: next.config.mjs  package.json
apps/worker/: eslint.config.js  jest.config.js  package.json
docs/: architecture-solana-enforcement.md  dev-quickstart.md  solana-escrow-setup.md
eslint/: jsx-uses-vars.cjs
scripts/: add-pkg.js  set-project.mjs
(+262 files in other folders)
