[package]
name = "saintrocky-escrow"
version = "0.1.0"
description = "SaintRocky on-chain escrow for discipline enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "saintrocky_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
